--- a/template.yaml
+++ b/template.yaml
@@ -460,92 +460,10 @@ Resources:
         DNSName: !GetAtt CloudFrontDistribution.DomainName # Your CloudFront distribution's domain name
         EvaluateTargetHealth: false # Important for CloudFront
 
-  # UserPool:
-  #   Type: AWS::Cognito::UserPool
-  #   Properties:
-  #     UserPoolName: VisitorManagementUserPool
-  #     # Configure password policies as needed
-  #     Policies:
-  #       PasswordPolicy:
-  #         MinimumLength: 8
-  #         RequireLowercase: true
-  #         RequireNumbers: true
-  #         RequireSymbols: false
-  #         RequireUppercase: true
-  #     UsernameAttributes:
-  #       - email
-  #     # Configure auto-verification for email/phone
-  #     AutoVerifiedAttributes:
-  #       - email
-  #     # Standard attributes can't be modified once the user pool is created.
-  #     Schema:
-  #       - Name: phone_number
-  #         AttributeDataType: String
-  #         Required: false
-  #         Mutable: true
-  #       - Name: email
-  #         AttributeDataType: String
-  #         Required: false
-  #         Mutable: true
-  #       - Name: given_name
-  #         AttributeDataType: String
-  #         Required: false
-  #         Mutable: true
-  #       - Name: family_name
-  #         AttributeDataType: String
-  #         Required: false
-  #         Mutable: true
-  #     # Configure message customizations (email verification, password reset)
-  #     # MessageConfigurations:
-  #     #   EmailMessage: "..."
-  #     #   EmailSubject: "..."
-  #     # Configure MFA if desired
-  #     # MfaConfiguration: OPTIONAL
-  #     # SmsConfiguration:
-  #     #   SmsSenderId: "..."
-  #     #   SmsRegion: "..."
-  #     # Configure user pool add-ons (advanced security features)
-  #     # UserPoolAddOns:
-  #     #   AdvancedSecurityMode: ENFORCED
-
-  # UserPoolClient:
-  #   Type: AWS::Cognito::UserPoolClient
-  #   Properties:
-  #     ClientName: VisitorManagementClient
-  #     UserPoolId: !Ref UserPool
-  #     # Configure allowed OAuth flows and scopes for your application
-  #     AllowedOAuthFlows:
-  #       - code
-  #     AllowedOAuthScopes:
-  #       - email
-  #       - openid
-  #       - profile
-  #     CallbackURLs:
-  #       - https://vms.alphinecodetech.click/signin-callback # Replace with your actual callback URL(s)
-  #     LogoutURLs:
-  #       - https://vms.alphinecodetech.click/signout-callback # Replace with your actual logout URL(s)
-  #     # Enable/disable refresh token generation
-  #     GenerateSecret: false
-  #     # Configure supported identity providers (e.g., Cognito, Google, Facebook)
-  #     # SupportedIdentityProviders:
-  #     #   - COGNITO
-
-  # UserPoolDomain:
-  #   Type: AWS::Cognito::UserPoolDomain
-  #   Properties:
-  #     Domain: !Ref AuthDomainPrefix
-  #     UserPoolId: !Ref UserPool
-  #     # You can optionally specify a custom domain and certificate ARN here for a branded domain
-  #     # CertificateArn: 'arn:aws:acm:...'
-  #     # CustomDomainConfig:
-  #     #   CertificateArn: 'arn:aws:acm:...'
-  #     #   Domain: 'auth.yourdomain.com'
-
   CognitoUserPool:
     Type: AWS::Cognito::UserPool
     Properties:
       UserPoolName: VisitorManagementCognitoUserPool
-      # Configure password policies as needed
       Policies:
         PasswordPolicy:
           MinimumLength: 8
@@ -555,10 +473,8 @@ Resources:
           RequireUppercase: true
       UsernameAttributes:
         - email
-      # Configure auto-verification for email/phone
       AutoVerifiedAttributes:
         - email
-      # Standard attributes can't be modified once the user pool is created.
       Schema:
         - Name: phone_number
           AttributeDataType: String
@@ -607,9 +523,8 @@ Resources:
         - https://vms.alphinecodetech.click/signout-callback # Replace with your actual logout URL(s)
       # Enable/disable refresh token generation
       GenerateSecret: false
-      # Configure supported identity providers (e.g., Cognito, Google, Facebook)
-      # SupportedIdentityProviders:
-      #   - COGNITO
+      SupportedIdentityProviders:
+        - COGNITO
 
   CognitoUserPoolDomain:
     Type: AWS::Cognito::UserPoolDomain
