--- a/template.yaml
+++ b/template.yaml
@@ -464,16 +464,15 @@ Resources:
         DNSName: !GetAtt CloudFrontDistribution.DomainName # Your CloudFront distribution's domain name
         EvaluateTargetHealth: false # Important for CloudFront
 
-  CloudFrontAliasRecordA:
+  CognitoCustomDomainCNAME:
     Type: AWS::Route53::RecordSet
     Properties:
       HostedZoneId: !Ref HostedZone
       Name: !Ref CognitoCustomDomainName
-      Type: A
-      AliasTarget:
-        HostedZoneId: Z2FDTNDATAQYW2 # Global CloudFront Hosted Zone ID
-        DNSName: !GetAtt CloudFrontDistribution.DomainName # Your CloudFront distribution's domain name
-        EvaluateTargetHealth: false # Important for CloudFront
+      Type: CNAME
+      TTL: '300'
+      ResourceRecords:
+        - !GetAtt CognitoUserPoolDomain.CloudFrontDomain
 
   CognitoUserPool:
     Type: AWS::Cognito::UserPool
@@ -549,14 +548,6 @@ Resources:
       CustomDomainConfig:
         CertificateArn: !Ref AcmCertificateArn
 
-  CognitoUserPoolDomain:
-    Type: AWS::Cognito::UserPoolDomain
-    Properties:
-      Domain: vms.alphinecodetech.click  # Your actual custom domain
-      UserPoolId: !Ref CognitoUserPool
-      CustomDomainConfig:
-        CertificateArn: !Ref AcmCertificateArn
-
 Outputs:
   APIGatewayEndpoint:
     Description: API Gateway endpoint URL for Prod stage
@@ -570,18 +561,18 @@ Outputs:
   WebS3BucketName:
     Description: S3 Bucket for hosting web frontend
     Value: !Ref WebSiteBucket
-  UserPoolId:
-    Description: Cognito User Pool ID
-    Value: !Ref CognitoUserPool
-  UserPoolClientId:
-    Description: Cognito User Pool Client ID
-    Value: !Ref CognitoUserPoolClient
-  UserPoolDomainUrl:
-    Description: Cognito User Pool Domain URL
-    Value: !Ref CognitoCustomDomainName
-  AuthorityUrl:
-    Description: Cognito User Pool Authority URL (for OIDC client)
-    Value: !Sub https://cognito-idp.${AWS::Region}.amazonaws.com/${CognitoUserPool}
+  # UserPoolId:
+  #   Description: Cognito User Pool ID
+  #   Value: !Ref CognitoUserPool
+  # UserPoolClientId:
+  #   Description: Cognito User Pool Client ID
+  #   Value: !Ref CognitoUserPoolClient
+  # UserPoolDomainUrl:
+  #   Description: Cognito User Pool Domain URL
+  #   Value: !Ref CognitoCustomDomainName
+  # AuthorityUrl:
+  #   Description: Cognito User Pool Authority URL (for OIDC client)
+  #   Value: !Sub https://cognito-idp.${AWS::Region}.amazonaws.com/${CognitoUserPool}
   # More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
 Globals:
   Function:
