--- a/template.yaml
+++ b/template.yaml
@@ -539,13 +539,14 @@ Resources:
       GenerateSecret: false
       SupportedIdentityProviders:
         - COGNITO
-  # CognitoUserPoolDomain:
-  #   Type: AWS::Cognito::UserPoolDomain
-  #   Properties:
-  #     Domain: !Ref CognitoCustomDomainName
-  #     UserPoolId: !Ref CognitoUserPool
-  #     CustomDomainConfig:
-  #       CertificateArn: !Ref AcmCertificateArn
+
+  CognitoUserPoolDomain:
+    Type: AWS::Cognito::UserPoolDomain
+    Properties:
+      Domain: !Ref CognitoCustomDomainName
+      UserPoolId: !Ref CognitoUserPool
+      CustomDomainConfig:
+        CertificateArn: arn:aws:acm:us-east-1:121216464768:certificate/4f441ddb-b0d2-493d-b2d0-e5b3ed387553
 
 Outputs:
   APIGatewayEndpoint:
