--- a/template.yaml
+++ b/template.yaml
@@ -464,6 +464,17 @@ Resources:
         DNSName: !GetAtt CloudFrontDistribution.DomainName # Your CloudFront distribution's domain name
         EvaluateTargetHealth: false # Important for CloudFront
 
+  CloudFrontAliasRecordA:
+    Type: AWS::Route53::RecordSet
+    Properties:
+      HostedZoneId: !Ref HostedZone
+      Name: login.vms.alphinecodetech.click
+      Type: A
+      AliasTarget:
+        HostedZoneId: Z2FDTNDATAQYW2 # Global CloudFront Hosted Zone ID
+        DNSName: !GetAtt CloudFrontDistribution.DomainName # Your CloudFront distribution's domain name
+        EvaluateTargetHealth: false # Important for CloudFront
+
   CognitoCustomDomainCNAME:
     Type: AWS::Route53::RecordSet
     Properties:
